# promor

./: Cargo.toml  Justfile
migrations/: 20250108213930_setup.down.sql  20250108213930_setup.up.sql
scripts/: README.md  api  pages.sh  stores.sh  utils.sh
scripts/data/pages/: valid.json
scripts/data/stores/: invalid_name.json  invalid_url.json  valid.json
src/: error.rs  macros.rs  main.rs  scrapper.rs
src/discord/: mod.rs
src/handlers/: mod.rs  page.rs  product.rs  product_price.rs  store.rs
src/models/: handler.rs  mod.rs  page.rs  product.rs  product_price.rs  store.rs
src/routers/: mod.rs  page.rs  product.rs  product_price.rs  store.rs
src/scraper/: kabum_product_handler.rs  kabum_search_handler.rs  kabum_search_parser.rs  mod.rs  page_scraper.rs  queue_scraper.rs
