[package]
name = "promor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
headless_chrome = "1.0.15"
num-traits = "0.2.19"
poise = "0.6.1"
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = ["postgres", "tls-rustls", "macros", "chrono", "runtime-tokio", "bigdecimal"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
validator = { version = "0.19.0", features = ["derive"] }
